--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Hello, world!</title>
+    <title>Florante Singcak</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <h1>We can do this!</h1>
+  
+  <!--navigation-->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
@@ -51,8 +52,12 @@
         </div>
       </nav>
 
+
+<!--hero-->
+
+
     <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
+        <h1 class="display-4">Florante Singcak</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
@@ -60,6 +65,9 @@
           <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </p>
       </div>
+
+
+<!--work-->
 
 <div class="container">
   <div class="row">
@@ -107,6 +115,9 @@
     </div>
 </div>
 
+<!--skills and about-->
+
+
 <div class="container">
     <div class="row">
       <div class="col">
@@ -125,6 +136,8 @@
       </div>
     </div>
 </div>
+
+<!--footer-->
 
 
 
