updated html to include graphic images on cards

--- a/index.html
+++ b/index.html
@@ -58,12 +58,8 @@
 
     <div class="jumbotron">
         <h1 class="display-4">Florante Singcak</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <p class="lead">Sample portfolio page showing finished and future projects.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
       </div>
 
 
@@ -74,31 +70,31 @@
     <div class="col-sm">
       One of three columns
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="./images/01-html-css-git-challenge-demo.png" alt="Screenshot of Horiseon webpage">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Horizon Website Project</h5>
+          <p class="card-text">Edited client website to meet accessibility standards.</p>
+          <a href="https://florsing.github.io/Module_01_Challenge#" class="btn btn-primary">View Deployment</a>
         </div>
       </div>
     </div>
     <div class="col-sm">
       One of three columns
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="./images/Screenshot_20221222_030328.png" alt="Screenshot of portfolio webpage">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Portfolio Page</h5>
+          <p class="card-text">Created first portfolio page using Flexbox</p>
+          <a href="https://florsing.github.io/My-first-portfolio-page#" class="btn btn-primary">View Deployment</a>
         </div>
       </div>
     </div>
     <div class="col-sm">
       One of three columns
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="./images/fs.jpg" alt="FS card logo">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Future Project</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
