--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <h2>My Projects</h2>
   <div class="row">
     <div class="col-sm">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 18rem; height: 30rem;">
         <img class="card-img-top" src="./images/horiseon1.jpg" alt="Screenshot of Horiseon webpage">
         <div class="card-body">
           <h5 class="card-title">Horizon Website Project</h5>
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="col-sm">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 18rem; height: 30rem;">
         <img class="card-img-top" src="./images/portf1.jpg" alt="Screenshot of portfolio webpage">
         <div class="card-body">
           <h5 class="card-title">Portfolio Page</h5>
@@ -80,64 +80,58 @@
       </div>
     </div>
     <div class="col-sm">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 18rem; height: 30rem;">
         <img class="card-img-top" src="./images/fs.jpg" alt="FS card logo">
         <div class="card-body">
           <h5 class="card-title">Future Project</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-text">Short project description.</p>
+          <a href="#" class="btn btn-primary">View Here</a>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="container">
+<!--
+
+  <div class="container">
     <div class="row">
       <div class="col">
       </div>
     </div>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col">
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col">
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col">
-    </div>
-  </div>
-</div>
+
+-->
 
 <!--skills and about-->
 
 
-<div class="container">
+<div class="container personal-info" >
   <h3></h3>
-    <div class="row" id="skills">
-      <div class="col">
-        <h4>List of Skills</h4>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          
-        </ul>
-      </div>
-      <div class="col" id="aboutme">
-        <h5>About Me</h5>
+  <div class="card" style="width: 18rem;">
+    <div class="card-header">
+      List of Skills
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">HTML</li>
+      <li class="list-group-item">CSS</li>
+      <li class="list-group-item">JavaScript</li>
+    </ul>
+  </div>
+  
+  <div class="col" id="aboutme">
+    <h5>About Me</h5>
           <p>This section reserved for summary paragraph about me. </p>
           <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-    </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12" id="CV">
+              <a href="#" class="btn btn-primary">See my CV</a>
+            </div>
+          </div>
+        </div>
+      </div>
   </div>
 
   <div class="container" id="contact">
