--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="card" style="width: 18rem; height: 30rem;">
         <img class="card-img-top" src="./images/horiseon1.jpg" alt="Screenshot of Horiseon webpage">
         <div class="card-body">
-          <h5 class="card-title">Horizon Website Project</h5>
+          <h3 class="card-title">Horizon Website Project</h3>
           <p class="card-text">Edited client website to meet accessibility standards.</p>
           <a href="https://florsing.github.io/Module_01_Challenge#" class="btn btn-primary">View Deployment</a>
         </div>
@@ -73,7 +73,7 @@
       <div class="card" style="width: 18rem; height: 30rem;">
         <img class="card-img-top" src="./images/portf1.jpg" alt="Screenshot of portfolio webpage">
         <div class="card-body">
-          <h5 class="card-title">Portfolio Page</h5>
+          <h3 class="card-title">Portfolio Page Project</h3>
           <p class="card-text">Created first portfolio page using Flexbox</p>
           <a href="https://florsing.github.io/My-first-portfolio-page#" class="btn btn-primary">View Deployment</a>
         </div>
@@ -83,7 +83,7 @@
       <div class="card" style="width: 18rem; height: 30rem;">
         <img class="card-img-top" src="./images/fs.jpg" alt="FS card logo">
         <div class="card-body">
-          <h5 class="card-title">Future Project</h5>
+          <h3 class="card-title">Future Project</h3>
           <p class="card-text">Short project description.</p>
           <a href="#" class="btn btn-primary">View Here</a>
         </div>
@@ -105,33 +105,45 @@
 
 <!--skills and about-->
 
-
-<div class="container personal-info" >
-  <h3></h3>
-  <div class="card" style="width: 18rem;">
-    <div class="card-header">
-      List of Skills
-    </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">HTML</li>
-      <li class="list-group-item">CSS</li>
-      <li class="list-group-item">JavaScript</li>
-    </ul>
-  </div>
-  
-  <div class="col" id="aboutme">
-    <h5>About Me</h5>
-          <p>This section reserved for summary paragraph about me. </p>
-          <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="container" id="personal-info">
+  <h4></h4>
+  <div class="row">
+    <div class="col-lg" id="skills">
+      <div class="card" style="width: 30rem; background-color: transparent;">
+        <div class="card-body">
+          <h5 class="card-title">List of Skills</h5>
+          <div class="card" style="width: 18rem;">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">HTML</li>
+              <li class="list-group-item">CSS</li>
+              <li class="list-group-item">JavaScript</li>
+            </ul>
+          </div>
+        </div>
       </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12" id="CV">
-              <a href="#" class="btn btn-primary">See my CV</a>
+    </div>
+    <div class="col-lg" id="aboutme">
+      <div class="card" style="width: 30rem; background-color: transparent; ">
+        <div class="card-body-aboutme">
+          <h5 class="card-title">About Me</h5>
+          <img class="card-img-me" src="./images/portfolio-image.jpg" alt="Huckleberry Finn 1884  ">
+            <p>This section reserved for summary paragraph about me. </p>
+            <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-12" id="CV">
+                  <a href="./images/2023cvFPS.pdf" class="btn btn-primary">See my CV</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+
   </div>
 
   <div class="container" id="contact">
