--- a/index.html
+++ b/index.html
@@ -110,14 +110,67 @@
   <div class="row">
     <div class="col-lg" id="skills">
       <div class="card" style="width: 30rem; background-color: transparent;">
-        <div class="card-body">
+        <div class="card-body-skills">
           <h5 class="card-title">List of Skills</h5>
-          <div class="card" style="width: 18rem;">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">HTML</li>
-              <li class="list-group-item">CSS</li>
-              <li class="list-group-item">JavaScript</li>
-            </ul>
+
+          <div class="card mb-3" style="max-width: 540px; background-color: transparent; border: 1px solid pink">
+            <div class="row no-gutters">
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title text-center" ><i class="fa-solid fa-code fa-2xl"></i> HTML</h5>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3" style="max-width: 540px; background-color: transparent; border: 1px solid pink">
+            <div class="row no-gutters">
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title text-center"><i class="fa-brands fa-css3 fa-2xl"></i>CSS</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3" style="max-width: 540px; background-color: transparent; border: 1px solid pink">
+            <div class="row no-gutters">
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title text-center"><i class="fa-brands fa-square-js fa-2xl"></i>     JavaScript</h5>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3" style="max-width: 540px; background-color: transparent; border: 1px solid pink">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="..." class="card-img img-thumbnail" alt="..." >
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">future skills yet to learn</h5>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3" style="max-width: 540px; background-color: transparent; border: 1px solid pink">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="..." class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">future skills yet to learn</h5>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
