improved more on the layout

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <h2>My Projects</h2>
   <div class="row">
     <div class="col-sm">
-      <div class="card" style="width: 18rem; height: 30rem;">
+      <div class="card work-card" >
         <img class="card-img-top" src="./images/horiseon1.jpg" alt="Screenshot of Horiseon webpage">
         <div class="card-body">
           <h3 class="card-title">Horizon Website Project</h3>
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="col-sm">
-      <div class="card" style="width: 18rem; height: 30rem;">
+      <div class="card work-card" >
         <img class="card-img-top" src="./images/portf1.jpg" alt="Screenshot of portfolio webpage">
         <div class="card-body">
           <h3 class="card-title">Portfolio Page Project</h3>
@@ -80,7 +80,7 @@
       </div>
     </div>
     <div class="col-sm">
-      <div class="card" style="width: 18rem; height: 30rem;">
+      <div class="card work-card" >
         <img class="card-img-top" src="./images/fs.jpg" alt="FS card logo">
         <div class="card-body">
           <h3 class="card-title">Future Project</h3>
@@ -148,7 +148,7 @@
           <div class="card mb-3" style="max-width: 540px; background-color: transparent; border: 1px solid pink">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="..." class="card-img img-thumbnail" alt="..." >
+                <img src="./images/fs.jpg" class="card-img-skill" alt="fs logo">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -162,7 +162,7 @@
           <div class="card mb-3" style="max-width: 540px; background-color: transparent; border: 1px solid pink">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="..." class="card-img" alt="...">
+                <img src="./images/fs.jpg" class="card-img-skill" alt="fs logo">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
