finished code & style - publish to github

--- a/index.html
+++ b/index.html
@@ -207,16 +207,16 @@
     </div>
     <div class="row social">
       <div class="col">
-          <p><i class="fa-brands fa-twitter fa-lg"></i></p>
+          <p><i class="fa-brands fa-twitter fa-lg" ></i><a href="https://twitter.com/home"> @fpsingcak</a></p> 
       </div>
       <div class="col">
-          <p><i class="fa-brands fa-github fa-lg"></i></p>
+          <p><i class="fa-brands fa-github fa-lg"></i> <a href="https://github.com/">FlorSing</a></p>
       </div>
       <div class="col">
-          <p><i class="fa-solid fa-envelope fa-lg"></i></p>
+          <p><i class="fa-solid fa-envelope fa-lg"></i><a href="mailto: fpsingcak@gmail.com">fpsingcak@gmail.com</a></p>
       </div>
       <div class="col">
-            <p><i class="fa-solid fa-phone fa-lg"></i></p>
+            <p><i class="fa-solid fa-phone fa-lg" ></i><a href="#">+447780000000</a> </p>
       </div>
     </div>
 </div>
@@ -226,7 +226,7 @@
 <footer>
   <div class="container footer">
     <div class="row">
-      <div class="col">
+      <div class="col ">
         <p>:: Copyright FPS 2022 ::</p>
       </div>
     </div>
