--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--navigation-->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
-        <a class="navbar-brand" href="#">We can do this!</a>
+        <a class="navbar-brand" href="#"><img src="images/portfolio-image-sm.jpg" >We can do this!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,7 +50,6 @@
     <div class="jumbotron">
         <h1 class="display-4">Florante Singcak</h1>
         <p class="lead">Sample portfolio page showing finished and future projects.</p>
-        <hr class="my-4">
       </div>
 
 
